--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Timeliner</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <h1>The Timeliner</h1>
+    <div class="search-container">
+        <div class="search-box">
+            <button class="btn-search"><i class="fas fa-search"></i></button>
+            <input type="text" class="input-search" placeholder="Type to Search...">
+        </div>
+        <button class="btn-download"><i class="fas fa-download"></i></button>
+        <h4>Download Excel</h4>
+    </div>
+    <div class="timeline-container">
     <ul>
         <!-- January -->
         <li style="--accent-color:#41516C">
@@ -222,6 +233,8 @@
             <div class="descr">Open to all. Collective pool prize worth USD 100,000. Registration deadline: October 15</div>
         </li>
     </ul>
+</div>
    <center><h3>&copy; Shivangi Suyash</h3></center>
+   <script src="script.js"></script>
 </body>
 </html>
