--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <h1>The Timeliner</h1>
+    <button id="downloadButton" class="btn-download"><i class="fas fa-download"></i></button>
+      <h4>Download Excel</h4>
     <div class="search-container">
-        <div class="search-box">
-            <button class="btn-search"><i class="fas fa-search"></i></button>
-            <input type="text" class="input-search" placeholder="Type to Search...">
-        </div>
-        <button class="btn-download"><i class="fas fa-download"></i></button>
-        <h4>Download Excel</h4>
+      <div class="search-box">
+        <button class="btn-search"><i class="fas fa-search"></i></button>
+        <input type="text" class="input-search" placeholder="Type to Search...">
+      </div>
     </div>
     <div class="timeline-container">
     <ul>
@@ -236,5 +235,6 @@
 </div>
    <center><h3>&copy; Shivangi Suyash</h3></center>
    <script src="script.js"></script>
+   
 </body>
 </html>
